--- a/Pra01_lottoNumber/app/src/main/res/values/colors.xml
+++ b/Pra01_lottoNumber/app/src/main/res/values/colors.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimaryDark">#303f9f</color>
+    <color name="colorAccent">#ff4081</color>
+
+    <color name="colorPrimaryResult">#2196f3</color>
+    <color name="colorPrimaryDarkResult">#1976d2</color>
+    <color name="colorAccentResult">#ff4081</color>
+
+    <color name="colorPrimaryConstellation">#673ab7</color>
+    <color name="colorPrimaryDarkConstellation">#512da8</color>
+    <color name="colorAccentConstellation">#7e57c2</color>
+    <color name="colorContentConstellation">#556080</color>
+    <color name="colorButtonConstellation">#673ab7</color>
+
+    <color name="colorPrimaryName">#f9a11f</color>
+    <color name="colorPrimaryDarkName">#ef6c00</color>
+    <color name="colorAccentName">#ffc107</color>
+    <color name="colorContentName">#fcd837</color>
+    <color name="colorButtonName">#f9a11f</color>
+
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
