--- a/Pra01_lottoNumber/app/src/main/res/layout/activity_result.xml
+++ b/Pra01_lottoNumber/app/src/main/res/layout/activity_result.xml
@@ -7,7 +7,7 @@
     tools:context=".ResultActivity">
 
     <view
-        android:id="@+id/resultLavel"
+        android:id="@+id/resultLabel"
         class="androidx.appcompat.widget.AppCompatTextView"
         android:layout_width="0dp"
         android:layout_height="155dp"
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toStartOf="@+id/imageView02"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultLavel"
+        app:layout_constraintTop_toBottomOf="@+id/resultLabel"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -45,7 +45,7 @@
         app:layout_constraintEnd_toStartOf="@+id/imageView03"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView01"
-        app:layout_constraintTop_toBottomOf="@+id/resultLavel"
+        app:layout_constraintTop_toBottomOf="@+id/resultLabel"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -56,7 +56,7 @@
         app:layout_constraintEnd_toStartOf="@+id/imageView04"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView02"
-        app:layout_constraintTop_toBottomOf="@+id/resultLavel"
+        app:layout_constraintTop_toBottomOf="@+id/resultLabel"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -67,7 +67,7 @@
         app:layout_constraintEnd_toStartOf="@+id/imageView05"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView03"
-        app:layout_constraintTop_toBottomOf="@+id/resultLavel"
+        app:layout_constraintTop_toBottomOf="@+id/resultLabel"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -78,7 +78,7 @@
         app:layout_constraintEnd_toStartOf="@+id/imageView06"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView04"
-        app:layout_constraintTop_toBottomOf="@+id/resultLavel"
+        app:layout_constraintTop_toBottomOf="@+id/resultLabel"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -89,7 +89,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView05"
-        app:layout_constraintTop_toBottomOf="@+id/resultLavel"
+        app:layout_constraintTop_toBottomOf="@+id/resultLabel"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
