[UPDATE] Random use HashCode Constellation

--- a/Pra01_lottoNumber/app/src/main/res/layout/activity_constellation.xml
+++ b/Pra01_lottoNumber/app/src/main/res/layout/activity_constellation.xml
@@ -29,7 +29,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
