--- a/Pra05_AnonymousSNS/app/src/main/res/values/colors.xml
+++ b/Pra05_AnonymousSNS/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976d2</color>
+    <color name="colorAccent">#ff5722</color>
+    <color name="colorButton">#2196f3</color>
+    <color name="colorButtonText">#ffffff</color>
+
 </resources>
