--- a/Pra05_AnonymousSNS/app/src/main/res/layout/card_background.xml
+++ b/Pra05_AnonymousSNS/app/src/main/res/layout/card_background.xml
@@ -7,7 +7,7 @@
     app:cardUseCompatPadding="true">
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/default_bg"
