--- a/Pra05_AnonymousSNS/app/src/main/res/layout/card_post.xml
+++ b/Pra05_AnonymousSNS/app/src/main/res/layout/card_post.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageView1"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
