--- a/Pra05_AnonymousSNS/app/src/main/res/layout/activity_first.xml
+++ b/Pra05_AnonymousSNS/app/src/main/res/layout/activity_first.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/btnGithubLogin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FirstActivity">
@@ -28,17 +29,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnGoogleLogin" />
 
-    <TextView
-        android:id="@+id/errorText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="95dp"
-        android:layout_marginEnd="50dp"
-        android:text="TextView"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnFacebookLogin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
