--- a/Pra07_Calendar01/app/src/main/res/layout/activity_main.xml
+++ b/Pra07_Calendar01/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.applikeysolutions.cosmocalendar.view.CalendarView
+        android:id="@+id/calendar_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:orientation="horizontal"
+        app:connectedDayIconPosition="top"
+        app:currentDayIconRes="@android:drawable/ic_input_add"
+        app:currentDaySelectedIconRes="@drawable/ic_close_gray"
+        app:currentDayTextColor="#F79256"
+        app:firstDayOfTheWeek="sunday"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:connectedDaySelectedIconRes="@drawable/ic_launcher_background"
+        app:selectedDayBackgroundColor="#FFEACA"
+        app:selectedDayBackgroundEndColor="#F79256"
+        app:selectedDayBackgroundStartColor="#65297F"
+        app:selectedDayTextColor="#FFFFFF"
+        app:selectionType="single"
+        app:weekendDayTextColor="#ef4550" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
