--- a/Pra07_Calendar01/app/src/main/res/layout/activity_main.xml
+++ b/Pra07_Calendar01/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.applikeysolutions.cosmocalendar.view.CalendarView
-        android:id="@+id/calendar_view"
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+        android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:connectedDayIconPosition="top"
-        app:currentDayIconRes="@android:drawable/ic_input_add"
-        app:currentDaySelectedIconRes="@drawable/ic_close_gray"
-        app:currentDayTextColor="#F79256"
-        app:firstDayOfTheWeek="sunday"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="visible"
         app:layout_constraintTop_toTopOf="parent"
-        app:connectedDaySelectedIconRes="@drawable/ic_launcher_background"
-        app:selectedDayBackgroundColor="#FFEACA"
-        app:selectedDayBackgroundEndColor="#F79256"
-        app:selectedDayBackgroundStartColor="#65297F"
-        app:selectedDayTextColor="#FFFFFF"
-        app:selectionType="single"
-        app:weekendDayTextColor="#ef4550" />
+        app:mcv_selectionColor="#f79256"
+        app:mcv_calendarMode="month" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="104dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
